<?xml version="1.0"?>
<package>
  <name>tf_to_imu</name>
  <version>0.0.0</version>
  <description>The tf_to_imu package</description>

  <maintainer email="geoffrey.viola@asirobots.com">sbir</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>

  <export>
  </export>
</package>
